--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,7 @@ header{
     margin-top: -28%;
     color:#f8ecfa ;
     font-size: 2.1em;
+    text-shadow: 1px 1px 5px rgb(44, 44, 44);
 
 }
 
@@ -44,7 +45,7 @@ header{
 header > a > img{
     padding: 20px 0px 0px 0px;
     margin-left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%);q
     max-width: 70vw;
 }
 
