--- a/styles/style.css
+++ b/styles/style.css
@@ -9,35 +9,34 @@
     --cor002:#845487;
     --cor003:#628746;
     --cor004:#B2D498;
-    ---cor005:rgb(116, 114, 114);
+    --cor005:rgb(116, 114, 114);
 }
 
 body{
     width: 100vw;
 }
 
+/*-------- HEADER LOGOTIPO ----------*/
 
-nav{
+header{
+    display: block;
     width: 100vw;
     background-color: var(--cor001);
 }
 
-nav > a > img{
+
+header > a > img{
     padding: 20px 0px 0px 0px;
     margin-left: 50%;
     transform: translateX(-50%);
-    max-width: 40vw;
+    min-width: 30vw;
+    max-width: 45vw;
 }
 
-nav > div{
-
-}
-
-
-
+/*-------- HEADER MENU ----------*/
 
 .material-symbols-outlined{
-    color: var(---cor005);
+    color: var(--cor005);
     margin-left: 50%;
     transform: translateX(-50%);
     cursor: pointer;
@@ -45,12 +44,23 @@ nav > div{
     font-size: 1.5em;
 }
 
+#menu{
+    display: none;
+}
+
 
 ul > li{
     text-align: center;
-    color:var(---cor005);
+    color:var(--cor005);
 }
 
 ul > li > a{
     text-decoration: none;
 }
+
+
+
+
+/*
+border: 3px solid #73AD21;
+*/
