--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ header > a > img{
     padding: 20px 0px 0px 0px;
     margin-left: 50%;
     transform: translateX(-50%);
-    width: 80%;
+    width: 450px;
 
 }
 
