--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0px;
-    padding: 0px;
-}
 
 :root{
     --cor00:#D099D4;
@@ -12,6 +8,11 @@
     --cor005:rgb(116, 114, 114);
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 header, body{
     width: 100vw;
 }
@@ -20,18 +21,13 @@ header, body{
 
 header{
     display: block;
-    width: 100vw;
     background-color: var(--cor001);
-
-
+}
 
 #image{
-    padding: 20px 0px 0px 0px;
     margin-left: 50%;
     transform: translateX(-50%);
-    width: 400px;
-    max-width: 600px;
-
+    width: 80%;
 }
 
 /*-------- HEADER MENU ----------*/
