--- a/styles/style1.css
+++ b/styles/style1.css
@@ -18,6 +18,9 @@ body header{
 /*---------- HEADER CONFIGURATION --------- */
 header{
     background-color: var(--cor001);
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 #logo{
@@ -45,7 +48,7 @@ header{
 
 #menuDrop > ul{
     position: absolute;
-    background-color: #fcd1ffa7;
+    background-color: #fcd1ffad;
     width: 50%;
     
 }
@@ -55,6 +58,14 @@ a{
     color:#3A2D18;
 }
 /*---------- MAIN --------- */
+main{
+    padding-top: 190px;
+}
+
+.imagem-sec{
+
+}
+
 
 .imagem{
     width: 100vw;
