--- a/styles/style1.css
+++ b/styles/style1.css
@@ -58,16 +58,23 @@ a{
     text-decoration: none;
     color:#3A2D18;
 }
-/*---------- MAIN --------- */
+/*---------- MAIN ---------*/
 main{
 
 }
 
 .imagem-sec{
-
+    background-color: var(--cor001);
 }
-
 
 .imagem{
+    background-size: cover;
+    background-attachment: fixed;
     width: 100vw;
 }
+
+.descrição{
+    background-color: var(--cor001);
+}
+
+/*---------- FOORTER ----------*/
