--- a/styles/style.css
+++ b/styles/style.css
@@ -77,4 +77,10 @@ main{
     background-color: var(--cor001);
 }
 
+/*---------- TEXT ----------*/
+.descrição > p{
+    padding: 10px;
+}
+
+
 /*---------- FOORTER ----------*/
