--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@ header{
     top: 0;
     right: 0;
     left: 0;
+    z-index: 999;
     
 }
 
@@ -74,23 +75,18 @@ main{
 
 }
 
-.imagem-cnt{
+.imagem-cnt > img{
+    position: relative;
     width: 100vw;
-    padding-top: 200px;
-    padding-bottom: 160px;
-    background-repeat: no-repeat;
-    background-size: cover;
+    z-index: 500;
 
-
-    
 }
 
-#img1{
-    background-image:url('../static/Lettering-2.png');
-}
-
-.imagem{
-    width: 100vw;
+.imagem-cnt > div{
+    position: absolute;
+    z-index: 700;
+    top:60%;
+    right: 10%;
 }
 
 /*---------- TEXT ----------*/
@@ -118,10 +114,12 @@ footer{
 
 .whatsappbtn{
     display: inline-flex;
-    background-color: aqua;
+    background-color: #2CBF36;
+    color: #F2F2F2;
+    border:3px solid #F2F2F2;
     width: 150px;
     height: 50px;
-    border-radius: 25px;
+    border-radius: 30px;
     justify-content: center;
     align-items: center;
 }
