--- a/styles/style.css
+++ b/styles/style.css
@@ -31,9 +31,10 @@ header{
 
 #logo{
     position: absolute;
-    padding: 10px;
+    padding: 5px;
+    margin-left: 10px;
     display: inline;
-    width: 120px;   
+    width: 80px;   
 }
 .lettering{
     display: block;
@@ -41,7 +42,7 @@ header{
     padding: 5px;
 }
 .lettering > h1{
-    color: rgb(232, 232, 232);
+    color: rgb(245, 245, 245);
     text-shadow: 2px 2px rgba(56, 56, 56, 0.703);
     font-size: 2.7  em;
     text-align: center;
