--- a/templates/contactos.html
+++ b/templates/contactos.html
@@ -13,14 +13,14 @@
 </head>
     <body>
         <header>
-            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
+            <a href="index.html"><img id="logo" src="../static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
                 <div class="lettering">
                     <h1>Aurora de Luz</h1>
                     <h2>Centro de Terapias de Gaia</h2>
                 </div>
             </a>
             <nav>
-                <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
+                <img id="burger" src="../static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
             <div id="menuDrop">
                 <ul id="menu">
@@ -41,6 +41,6 @@
                 </p>
             </section>
         </footer>
-        <script src="script/script.js"></script>
+        <script src="../script/script.js"></script>
     </body>
 </html>
