--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="static/font/fontstylesheet.css">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../static/font/fontstylesheet.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,14 +13,14 @@
 </head>
     <body>
         <header>
-            <a href="index.html"><img id="logo" src="static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
+            <a href="index.html"><img id="logo" src="../static/LogotipoSemLettring (571 x 500 px).png" alt="Logo da empresa">
                 <div class="lettering">
                     <h1>Aurora de Luz</h1>
                     <h2>Centro de Terapias de Gaia</h2>
                 </div>
             </a>
             <nav>
-                <img id="burger" src="static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
+                <img id="burger" src="../static/menu_FILL0_wght400_GRAD0_opsz24.svg" alt="menu" onclick="menuPr()">
             </nav>
             <div id="menuDrop">
                 <ul id="menu">
@@ -32,7 +32,7 @@
         </header>
         <main>
             <section class="imagem-cnt" id="img1">
-                <img src="static/terapiasQuadrado.png" alt="">
+                <img src="../static/terapiasQuadrado.png" alt="">
             </section>
             <section class="descrição">
                 <h1>Sobre o Aurora de Luz</h1>
@@ -63,6 +63,6 @@
                 </p>
             </section>
         </footer>
-        <script src="script/script.js"></script>
+        <script src="../script/script.js"></script>
     </body>
 </html>
